fix: replace List.of/Map.of with Arrays.asList/HashMap for JDK 8 compatibility